--- a/Demo1/index.html
+++ b/Demo1/index.html
@@ -3,8 +3,102 @@
   <head>
     <title>HaHah!</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+
+<style>
+
+button{
+      background-color: darkgreen;
+      height:30px;
+      width:100px;
+      color:orange;
+    }
+
+.container{
+  display: grid;
+  width: 80vw;
+  height: 100vh;
+  margin: auto;
+  /*grid-template-rows: 350px 350px 1fr 1fr;*/
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: minmax(100px,auto);
+  grid-gap: 15px;
+  border: 2px solid white;
+  justify-content: center;
+  }
+
+.box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+  }
+#one{
+
+}
+
+#two{
+
+}
+
+#three{
+
+}
+
+
+</style>
   </head>
+
   <body>
-    <h1>Hello, world!</h1>
+  <div class = "container">
+     <div class="box" id="one">box 1 </div>
+     <div class="box" id="two">box 2 </div>
+     <div class="box" id="three">box 3 </div>
+     <div class="box" id="four">box 4 </div>
+     <div class="box" id="five">box 5 </div>
+     <div class="box" id="five">box 6 </div>
+
+  </div>
+
+    <h1>T&nbsp;&nbsp;&nbsp;T, <br />   <!-- <br /> line breaks strong=粗体 em=斜体-->
+      <em>I don't want to do homework!!!</em></h1>
+    <h2><strong>T&nbsp;&nbsp;&nbsp;T</strong>, <em>I don't want to do homework.</em></h3>
+    <h3><strong>T&nbsp;&nbsp;&nbsp;T</strong>, <em>I don't want to do homework...</em></h4>
+    <h4><strong>OK</strong>, <em>I'll do it.</em></h6>
+<!-- ul无序列表，ol有序列表（1，2，3）-->
+    <ul>
+      <li>UI/UX Design</li>
+      <li>Product Design</li>
+      <li>Material Design</li>
+    </ul>
+
+    <!-- class + id -->
+    <div id="Design">coding a website is not hard</div>
+    <!-- img src -->
+    <img src="IMG_4579.jpg" width="50%">
+    <br /><br />
+    <!-- link href -->
+    <a href="http://www.zyqiao.design"> It's my website.</a>
+    <br /><br />
+
+<!--
+    <div id="Design">coding a website is not hard</div>
+    <blockquote cite="https://www.wikiwand.com/en/Scooby-Doo_(character)">
+    <p>Ruh-roh--RAGGY!!!</p>
+    <footer>—Scooby Doo, <cite>Mystery Incorporated</cite></footer>
+    </blockquote>
+-->
+<label for="color-select">Choose a color:</label>
+
+<select id="color-select">
+  <option value="">--Please choose an option--</option>
+  <option value="blue">Blue</option>
+  <option value="red">Red</option>
+  <option value="green">Green</option>
+  <option value="yellow">Yellow</option>
+  <option value="orange">Orange</option>
+  <option value="pink">Pink</option>
+</select>
+<button type="button" name="button">View</button>
+
   </body>
 </html>
